--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "infyomlabs/laravel-ui-adminlte": "^3.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.5"
