--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "spatie/laravel-medialibrary": "^9.0.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
